Add onclick interactivity for `index.html` and `main.js`

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,10 +3,9 @@
   * {
     text-align: center;
   }
-
-  body {
-    margin-top: 100px;
-    margin-bottom: 100px;
+  .row {
+    margin-top: 25px;
+    margin-bottom: 25px;
   }
 
   /* Heading Styles */
